tests/ui/empty/empty-attributes.stderr
error: unused attribute
  --> $DIR/empty-attributes.rs:9:1
   |
LL | #[repr()]
   | ^^^^^^^^^
   |
   = note: attribute `repr` with an empty list has no effect
note: the lint level is defined here
  --> $DIR/empty-attributes.rs:1:9
   |
LL | #![deny(unused_attributes)]
   |         ^^^^^^^^^^^^^^^^^
help: remove this attribute
   |
LL - #[repr()]
LL +
   |

error: unused attribute
  --> $DIR/empty-attributes.rs:12:1
   |
LL | #[target_feature()]
   | ^^^^^^^^^^^^^^^^^^^
   |
   = note: attribute `target_feature` with an empty list has no effect
help: remove this attribute
   |
LL - #[target_feature()]
LL +
   |

error: unused attribute
  --> $DIR/empty-attributes.rs:2:1
   |
LL | #![allow()]
   | ^^^^^^^^^^^
   |
   = note: attribute `allow` with an empty list has no effect
help: remove this attribute
   |
LL - #![allow()]
LL +
   |

error: unused attribute
  --> $DIR/empty-attributes.rs:3:1
   |
LL | #![expect()]
   | ^^^^^^^^^^^^
   |
   = note: attribute `expect` with an empty list has no effect
help: remove this attribute
   |
LL - #![expect()]
LL +
   |

error: unused attribute
  --> $DIR/empty-attributes.rs:4:1
   |
LL | #![warn()]
   | ^^^^^^^^^^
   |
   = note: attribute `warn` with an empty list has no effect
help: remove this attribute
   |
LL - #![warn()]
LL +
   |

error: unused attribute
  --> $DIR/empty-attributes.rs:5:1
   |
LL | #![deny()]
   | ^^^^^^^^^^
   |
   = note: attribute `deny` with an empty list has no effect
help: remove this attribute
   |
LL - #![deny()]
LL +
   |

error: unused attribute
  --> $DIR/empty-attributes.rs:6:1
   |
LL | #![forbid()]
   | ^^^^^^^^^^^^
   |
   = note: attribute `forbid` with an empty list has no effect
help: remove this attribute
   |
LL - #![forbid()]
LL +
   |

error: unused attribute
  --> $DIR/empty-attributes.rs:7:1
   |
LL | #![feature()]
   | ^^^^^^^^^^^^^
   |
   = note: attribute `feature` with an empty list has no effect
help: remove this attribute
   |
LL - #![feature()]
LL +
   |

error: aborting due to 8 previous errors

